# ctc

./: .env.example  .env.prod  .gitignore  DEPLOYMENT.md  README.md  approval-check.sh  deploy-remote.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.prod.example  nginx.conf  setup-env.sh  test-websocket.js
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  20250910120000_add_trading_controls.py  20250911050000_add_team_join_code.py  20250911070000_add_api_key_user_id.py  20251003202900_add_allowed_emails.py
backend/scripts/: render_benchmark_summary.py
backend/src/app/: config.py  deps.py  main.py  startup.py
backend/src/core/: orders.py
backend/src/db/: models.py  session.py
backend/src/exchange/: engine.py  manager.py  websocket_manager.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_features.py  test_api_routes.py  test_auth_allowed_emails.py  test_auth_google.py  test_auth_team_onboarding.py  test_e2e_api.py  test_engine.py  test_engine_property.py  test_health.py  test_order_service.py  test_team_settings.py  test_ws_market_data.py
backend/tests/performance/: test_exchange_performance.py
examples/: README.md  place_order_cli.py  pyproject.toml
frontend/: Dockerfile  jest.config.mjs  jest.setup.ts  next.config.mjs  package.json  pnpm-lock.yaml  run-jest.mjs  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: process_emails.py  test_setup.py
(+30 files in other folders)
