[project]
name = "ctc-backend"
version = "0.1.0"
description = "Cornell Trading Competition Platform Backend"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.19.0",
  "greenlet>=3.0.3",
  "hypothesis>=6.103.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "SQLAlchemy>=2.0.29",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.18",
  "alembic>=1.13.1",
  "redis>=5.0.4",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.3",
  "ruff>=0.4.9",
  "mypy>=1.10.0",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.21.0",
  "google-auth>=2.35.0",
  "pytest-benchmark>=5.1.0",
  "liquibook>=2.0.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
pythonpath = ["src"]
markers = [
  "performance: performance characterization suite for exchange components",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
